# UrlShortener

./: .gitignore  README.md  pyproject.toml
urlshortener/shortlink/: apps.py  models.py  serializers.py  urls.py  views.py
urlshortener/shortlink/migrations/: 0001_initial.py
urlshortener/shortlink/tests/: test_e2e.py  test_unit.py
urlshortener/urlshortener/: asgi.py  settings.py  urls.py  wsgi.py
