[project]
name = "urlshortener"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "urlshortener.settings"
